--- a/.github/workflows/Scraper.yml
+++ b/.github/workflows/Scraper.yml
@@ -25,3 +25,10 @@ jobs:
 
       - name: Run scraper
         run: dotnet run --configuration Release --project WebScrapper/WebScrapper.csproj
+
+      - name: Upload screenshot (if exists)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: screenshots
+          path: screenshot.png
